--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "cypress run --browser chrome --headed"
+    "test": "cypress run --browser chrome"
   },
   "author": "",
   "license": "ISC"
