--- a/.github/workflows/Cypress Tests.yml
+++ b/.github/workflows/Cypress Tests.yml
@@ -21,5 +21,4 @@ jobs:
 
       - name: 🧪 Run Cypress in Headless Chrome
         run: |
-          npx cypress run || echo "TESTS_FAILED=true" >> $GITHUB_ENV then
-            echo "Tests passed."
+          npx cypress run
